--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs rest api",
+  "name": "nodejsRestApi",
   "version": "1.0.0",
   "description": "API NodeJS rest",
   "main": "app.js",
